--- a/index.html
+++ b/index.html
@@ -1,32 +1,68 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Start Exam</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Exam Timer App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+      background: #f9f9f9;
+    }
+    #examContainer {
+      display: none;
+      padding: 20px;
+      border-radius: 10px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #333;
+    }
+    .timer {
+      font-size: 2em;
+      margin: 10px;
+      color: #009688;
+    }
+    button {
+      padding: 10px 20px;
+      margin-top: 20px;
+      font-size: 16px;
+      background-color: #00796B;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Start Your Exam</h1>
-    <form id="examForm">
-      <input type="text" id="examName" placeholder="Enter Exam Name" required><br>
-      <input type="number" id="totalQuestions" placeholder="Total Questions" required><br>
-      <input type="number" id="totalTime" placeholder="Total Time (minutes)" required><br>
-      <button type="submit">Start Exam</button>
-    </form>
+
+  <h1>📚 Exam Timer App</h1>
+
+  <div id="setupContainer">
+    <input type="text" id="examName" placeholder="Enter Exam Name">
+    <br><br>
+    <button onclick="startExam()">Start Exam</button>
   </div>
 
-  <script>
-    document.getElementById('examForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const examData = {
-        examName: document.getElementById('examName').value,
-        totalQuestions: parseInt(document.getElementById('totalQuestions').value),
-        totalTime: parseInt(document.getElementById('totalTime').value) * 60
-      };
-      localStorage.setItem('examData', JSON.stringify(examData));
-      window.location.href = 'exam.html';
-    });
-  </script>
+  <div id="examContainer">
+    <h2 id="examTitle"></h2>
+    <h3>🧠 Question <span id="questionNumber">1</span></h3>
+    <div class="timer">
+      Time Spent: <span id="questionTimer">00:00</span>
+    </div>
+    <button onclick="nextQuestion()">Next Question</button>
+  </div>
+
+  <script src="exam.js"></script>
 </body>
 </html>
