--- a/timer.html
+++ b/timer.html
@@ -25,7 +25,8 @@
       <button id="pauseBtn">⏸</button>
       <button id="nextBtn">➡️</button>
     </div>
-    <audio id="beepAudio" src="beep.mp3" preload="auto"></audio>
+<audio id="beepAudio" src="https://www.soundjay.com/buttons/beep-07.wav" preload="auto"></audio>
+
   </div>
 
   <script src="timer.js"></script>
