--- a/result.html
+++ b/result.html
@@ -20,5 +20,10 @@
     <button onclick="location.href='index.html'">🏠 Restart</button>
   </div>
   <script src="result.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
+<button onclick="downloadPDF()" style="margin-top: 20px;">Download Full PDF Report</button>
+
 </body>
 </html>
