--- a/timer.html
+++ b/timer.html
@@ -3,96 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Exam Timer</title>
+  <title>Question Timer</title>
   <link rel="stylesheet" href="timer.css" />
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #fdfdfd;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .app {
-      text-align: center;
-      padding: 1rem;
-      max-width: 400px;
-      width: 100%;
-    }
-
-    svg {
-      width: 100%;
-      height: auto;
-      max-width: 300px;
-    }
-
-    .question-info, .time-info {
-      margin: 1rem 0;
-      font-size: 1.1rem;
-    }
-
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    button {
-      padding: 0.5rem 1rem;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      background-color: #ff9900;
-      color: white;
-    }
-
-    .center-text {
-      font-size: 10px;
-      fill: #000;
-    }
-
-    @media screen and (max-width: 500px) {
-      .question-info, .time-info {
-        font-size: 1rem;
-      }
-
-      .center-text {
-        font-size: 6px;
-      }
-
-      button {
-        font-size: 1rem;
-      }
-    }
-  </style>
 </head>
 <body>
-  <div class="app">
-    <h2 id="examTitle">Exam Timer</h2>
-    <div class="circle-container">
-      <svg viewBox="0 0 100 100">
-        <circle cx="50" cy="50" r="45" class="bg" stroke="#eee" stroke-width="10" fill="none"/>
-        <circle cx="50" cy="50" r="45" class="progress" id="progressCircle" stroke="#f90" stroke-width="10" fill="none" stroke-dasharray="283" stroke-dashoffset="0"/>
-        <text x="50" y="53" text-anchor="middle" class="center-text" id="centerText">Start</text>
-      </svg>
+  <header class="app-header">
+    <h1>Sample Exam 012</h1>
+    <div class="header-icons">
+      <span>⚙️</span>
+      <span>❓</span>
     </div>
-    <div class="question-info">
-      <span id="questionCount">1</span> / <span id="totalQuestions">10</span>
-    </div>
-    <div class="time-info">
-      <span id="timeLeft">00:45</span> / <span id="perQuestion">01:30</span>
-    </div>
-    <div class="controls">
-      <button id="pauseBtn">⏸</button>
-      <button id="nextBtn">➡️</button>
-    </div>
-    <audio id="beepAudio" src="https://www.soundjay.com/buttons/sounds/beep-07.mp3" preload="auto"></audio>
-  </div>
+  </header>
 
+  <main class="timer-container">
+    <div class="progress-circle">
+      <svg class="progress-ring" width="200" height="200">
+        <circle class="ring-bg" r="90" cx="100" cy="100" />
+        <circle class="ring-progress" r="90" cx="100" cy="100" />
+      </svg>
+      <div class="center-content">
+        <div id="question-count">1 / 10</div>
+        <div id="next-btn">Next</div>
+      </div>
+    </div>
+
+    <div class="timer-display">
+      <span id="elapsed-time">00:00</span>
+      <span> / </span>
+      <span id="per-question-time">00:20</span>
+    </div>
+
+    <div class="timer-controls">
+      <button id="pause-btn">⏸</button>
+      <button id="stop-btn">⏹</button>
+    </div>
+  </main>
+
+  <audio id="beep-audio" src="https://www.soundjay.com/buttons/beep-07.wav" preload="auto"></audio>
   <script src="timer.js"></script>
+  
 </body>
 </html>
