--- a/timer.html
+++ b/timer.html
@@ -28,7 +28,9 @@
     </div>
   </div>
 
-  <audio id="beep" src="assets/beep.mp3" preload="auto"></audio>
+<!-- Beep sound -->
+  <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
+
   <script src="timer.js"></script>
 </body>
 </html>
