--- a/result.html
+++ b/result.html
@@ -3,27 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Exam Result</title>
-  <link rel="stylesheet" href="result.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h2>Exam Results</h2>
-    <p><strong>Exam:</strong> <span id="examName"></span></p>
-    <p><strong>Total Questions:</strong> <span id="totalQuestions"></span></p>
-    <p><strong>Time per Question:</strong> <span id="perQuestionTime"></span></p>
-    <p><strong>Total Time Taken:</strong> <span id="totalTimeTaken"></span></p>
-    <p><strong>Extra Time Used:</strong> <span id="extraTime"></span></p>
-
+    <h1 id="examTitle">Exam Result</h1>
     <canvas id="resultChart" width="400" height="250"></canvas>
-    <br />
-    <button onclick="location.href='index.html'">🏠 Restart</button>
+    <button id="downloadBtn">Download PDF</button>
   </div>
+
   <script src="result.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
-<button onclick="downloadPDF()" style="margin-top: 20px;">Download Full PDF Report</button>
-
 </body>
 </html>
