--- a/result.html
+++ b/result.html
@@ -5,21 +5,13 @@
   <title>Exam Result</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Add html2pdf.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <div class="result-container" id="resultSection">
-    <h1>📊 Exam Result</h1>
-    <p>Exam: <span id="examName"></span></p>
-    <p>Total Questions: <span id="totalQuestions"></span></p>
-    <p>Total Time: <span id="totalTime"></span> mins</p>
-    <p>Time Taken: <span id="timeTaken"></span></p>
-    <p>Extra Time Used: <span id="extraTime"></span></p>
-
-    <canvas id="resultChart" width="400" height="400"></canvas>
-
-    <button onclick="downloadPDF()">📥 Download PDF</button>
+  <div class="container">
+    <h1 id="examTitle">Exam Result</h1>
+    <canvas id="resultChart" width="400" height="250"></canvas>
+    <button id="downloadBtn">Download PDF</button>
   </div>
 
   <script src="result.js"></script>
