--- a/result.html
+++ b/result.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <title>Exam Result</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="result.js"></script>
+
 </head>
 <body>
   <div class="container">
     <h1 id="examTitle">Exam Result</h1>
-    <canvas id="resultChart" width="400" height="250"></canvas>
-    <button id="downloadBtn">Download PDF</button>
+   <canvas id="resultChart" width="400" height="250"></canvas>
+<button id="downloadBtn">Download PDF</button>
   </div>
 
   <script src="result.js"></script>
