--- a/timer.html
+++ b/timer.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  
   <title>Exam Timer</title>
+  
+  <!-- ✅ Mobile responsive meta tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="theme-color" content="#0d6efd" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,7 +37,7 @@
     </div>
   </div>
 
-<!-- Beep sound -->
+  <!-- Beep sound -->
   <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 
   <script src="timer.js"></script>
