--- a/timer.html
+++ b/timer.html
@@ -18,8 +18,8 @@
   <div class="container">
     <div class="progress-ring">
       <svg width="200" height="200">
-        <circle class="bg" cx="100" cy="100" r="90"/>
-        <circle class="progress" cx="100" cy="100" r="90"/>
+        <circle class="ring-bg" cx="100" cy="100" r="90"/>
+        <circle class="ring" cx="100" cy="100" r="90"/>
       </svg>
       <div class="center-content">
         <div id="questionNumber">1 / 10</div>
