--- a/timer.html
+++ b/timer.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#0d6efd" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="timer.css">
 </head>
 <body>
   <div class="container">
